--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/typography": "^0.5.2",
+    "@types/react-modal": "^3.16.3",
     "classnames": "^2.5.1",
+    "framer-motion": "^11.0.24",
     "history": "^5.3.0",
     "i18next": "^23.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
     "tailwind-safelist-generator": "^1.0.0"
   },
